--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <p class="welcome"><span>Seja</span> Bem-vindo ao nosso chat &#128516</p>
             <p class="welcome">Digite seu nome de usuário</p>
         </div>
-        <form action="/chat-verified" method="post" id="form" autocomplete="off">
+        <form action="/name-verified" method="post" id="form" autocomplete="off">
             <label for="nome" class="name-user">Nome/Usuário</label>
             <input type="text" name="nome" id="nome" class="input">
             <button type="submit" class="btn">Entrar</button>
