--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,6 @@
     <title>Chat</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/chat.css">
-    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body class="body">
     <main id="container">
@@ -23,6 +22,36 @@
             <i class="material-icons button" id="btn">keyboard_arrow_right</i>
         </div>
     </main>
-    <script src="chat.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const darkMode = document.getElementById("modo-escuro")
+        const lightMode = document.getElementById("modo-claro")
+        const button = document.getElementById("btn")
+        const chat = document.getElementById("chat")
+        const message = document.getElementById('message')
+
+        const client = io.connect()
+        button.addEventListener("click", function(){
+            client.emit("chat message", message.value)
+            message.value = ""
+        })
+        message.addEventListener("keypress", function(event){
+            if(event.key == "Enter"){
+                client.emit("chat message", message.value)
+                message.value = ""
+            }
+        })
+        client.on("chat message", function(msg, nome){
+            var item = document.createElement("p")
+            item.textContent = `${nome}: ${msg}`
+            chat.appendChild(item)
+        })
+        
+        function changeMode(){
+            document.body.classList.toggle("dark")
+        }
+        darkMode.addEventListener("click", changeMode)
+        lightMode.addEventListener("click", changeMode)
+    </script>
 </body>
 </html>
